--- a/style.css
+++ b/style.css
@@ -175,9 +175,9 @@ html, body{
 .column {
   text-align: center;
   float: left;
-  width: 40%;
-  padding-left: 5%;
-  padding-right: 5%;
+  width: 50%;
+  /* padding-left: 5%; 
+  padding-right: 5%; */
 }
 
 .row {
