--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ html, body{
 
 .banner3{
 	width: 100%;
-	height: 50%;
-	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(makerspace2.jpg);
+	height: 40%;
+	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(ucla3.jpg);
 	background-size: 100%;
 	background-position: center;
 	margin: 0px;
@@ -132,13 +132,12 @@ html, body{
 .banner3 h1{
 	font-style: normal;
 	text-align: center;
-	margin-top: 10vw;
+	margin-top: 3vw;
 }
-
 .banner3 p{
 	font-style: italic;
-	font-weight: 300;
 	text-align: center;
+	font-weight: 400;
 	font-size: 20px;
 	margin-bottom: 10vw;
 	margin-left: 25vw;
@@ -224,6 +223,72 @@ html, body{
 	margin: 0px;
 	padding: 0px 10vw;
 }
+/* new code for TEAM page */
+
+.bio{
+	padding-top: 50px;
+	color: black;
+}
+
+.bio h1{
+	color: #80a0ba;
+	font-weight: bold;
+	font-size: 22px;
+}
+
+.bio h2{
+	font-weight: bold;
+	font-size: 24px;
+}
+.bio h3{
+	font-weight: 400;
+	font-size: 16px;
+	padding-left: 60px;
+	padding-right: 60px;
+}
+
+.bio p{
+	font-size: 16px;
+	font-weight: 200;
+	padding-left: 60px;
+	padding-right: 60px;
+	padding-bottom: 30px;
+}
+
+.directors h1{
+	font-weight: bold;
+	text-align: center;
+	font-size: 30px;
+	color: black;
+}
+
+.banner5{
+	width: 100%;
+	height: 40%;
+	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(ucla3.jpg);
+	background-size: 100%;
+	background-position: center;
+	margin: 0px;
+	color: white;
+}
+
+.banner5 h1{
+	font-style: normal;
+	text-align: center;
+	margin-top: 3vw;
+}
+.banner5 p{
+	font-style: italic;
+	text-align: center;
+	font-weight: 400;
+	font-size: 20px;
+	margin-bottom: 10vw;
+	margin-left: 25vw;
+	margin-right: 25vw;
+}
+
+/* end of code for TEAM page */
+
 
 /*CSS for the TopNav*/
 
