--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ html, body{
 .banner3{
 	width: 100%;
 	height: 40%;
-	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(ucla3.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(makerspace2.jpg);
 	background-size: 100%;
 	background-position: center;
 	margin: 0px;
