--- a/style.css
+++ b/style.css
@@ -268,6 +268,13 @@ html, body{
 	color: black;
 }
 
+.alumni h1{
+	font-weight: bold;
+	text-align: center;
+	font-size: 30px;
+	color: black;
+}
+
 .banner5{
 	width: 100%;
 	height: 40%;
